--- a/css/style.css
+++ b/css/style.css
@@ -30,20 +30,18 @@ a {
 }
 
 .nav_link a:hover,
-.nav_link a:focus{
+.nav_link a:focus {
 	color: #81b3d2;
-	background-color: grey; 
+	background-color: white; 
 }
 
 .feature-list {
 	list-style: none;
+	text-align: center;
 }
 
-.features-img {
-	list-style: none;
-}
 
-.feature-item-light {
+.feature-item-white {
 	text-align: center;
 	color: white;
 	background: #81b3d2;
@@ -51,7 +49,7 @@ a {
 }
 
 
-.feature-item-dark {
+.feature-item-black {
 	text-align: center;
 	color: black;
 	background: #eeeeee;
@@ -59,11 +57,18 @@ a {
 }
 
 
-.feature-item-light h3 {
+.feature-list h3 {
 	font-size: 21px;
-
+	font-weight: 700;
 }
 
+.feature-photo1 {
+	float: right;
+}
+
+.features-img {
+	list-style: none;
+}
 
 
 
