--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,8 @@ a {
 
 .search input:focus {
 	background-color: white;
-	border-color: #e5e5e5; /*пока не работает */
+	outline:none;
+	border: 2px solid #e5e5e5; 
 }
 
 .button {
@@ -164,6 +165,7 @@ a {
 .button:hover,
 .button:focus {
 	background-color: #669ec0;
+	outline:none;
 }
 
 footer {
