--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ a {
 }
 
 .background {
-	width: 1201px;
+	width: 1199px;
 	height: 508px;
 	background-image: url("img/background.jpg");
 	background-position: center;
@@ -84,29 +84,35 @@ a {
 
 
 .background_reasons {
-	display: block;
-	height: 152px;
-	padding-top: 60px;
+	height: 151px;
 	text-align: center;
 	background-color: white;
 	border-top: 0;
+	padding-bottom: 65px;
+	
 	
 }
 .slogan {
 	margin: 0;
-	padding-bottom: 30px;
+    padding-top: 65px;
+	height: 47px;
 	font-size: 21px;
 	line-height: 26px;
 	font-weight: 700;
+
+
 }
 .features-text {
-	margin: 0;
-	line-height: 26px;
+	
+	margin-top: 54px;
+	
+	line-height: 14px;
 	background-color: white;
 }
 
 
 .feature-list {
+	
 	margin: 0;
 	padding-left: 0;
 	list-style: none;
