--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,14 @@ body {
 
 	background-color: #f2f2f2;
 }
-a {
-	text-decoration: none;
+	a {
+		text-decoration: none;
 } 
+
+	img {
+		max-width: 100%;
+		height: auto;
+	}
 
 .nav {
 	height: 56px;
@@ -40,7 +45,7 @@ a {
 	color:#000000;	
 }
 
-.nav_link a:hover,
+.nav_link a:hover, 
 .nav_link a:focus {
 	color: #81b3d2;
 	background-color: white; 
@@ -55,7 +60,7 @@ a {
 /*flex*/
 
 .nav_link {
-	display: flex;
+	display: flex;  
 	align-items: center; 
 	
 }
@@ -226,13 +231,20 @@ margin-top: 21px;
 	text-align: center;
 	background-color: white;
 	height: 205px;
-	padding-top: 25px;
+	
 	
 }
+
+.text-all div {
+	height: 147px;
+	padding-top: 58px;
+}
+
 .text-all h2 {
 	font-size: 30px;
-	line-height: 36px;
+	line-height: 30px;
 	font-weight: 700;
+	margin-top: 0;
 }
 
 .text {
@@ -263,6 +275,82 @@ margin-top: 21px;
 	background-color: #604e43
 }
 
+form {
+	background-color: white;
+	height: 395px;	
+	width: 568px;
+	position: relative;
+}
+
+form p {
+	padding-right: 38px;
+	padding-left: 52px;
+
+	
+	
+	
+}
+
+.arrival {
+padding-top: 55px;
+margin-bottom: 30px;
+}
+
+.departure {
+	margin-bottom: 30px;
+}
+
+form input {
+	margin-left: 20px ;
+	height: 38px;
+
+
+}
+
+.arrival input {
+	width: 346px;
+
+} 
+
+.departure input {
+	width: 346px;
+	margin-left: 16px;
+}
+
+.adults input,
+.children input {
+	width: 114px;
+	
+}
+
+.adults input {
+	margin-left: 36px;
+}
+
+.adults {
+	
+	
+}
+
+.children {
+	padding: 0;
+	margin-left: 51px;
+	position: absolute;
+	left: 280px;
+	top: 177px;
+	
+}
+
+.button {
+	width: 459px;
+	height: 58px;
+	margin-right: 58px;
+	margin-left: 52px;
+	margin-top: 55px;
+	padding: 0;
+
+}
+
 .form-search p {
 	line-height: 26px;
 	font-weight: 700;
@@ -270,7 +358,7 @@ margin-top: 21px;
 
 .form-search input {
 	font: inherit;
-	background-color: #f2f2f2;
+	background-color: #f2f2f2; 
 	border:none;
 }
 
@@ -289,6 +377,7 @@ margin-top: 21px;
 	text-transform: uppercase;
 
 	color: white;
+	font-size: 21px;
 	font-weight: 700;
 	vertical-align: middle;
 
@@ -301,6 +390,13 @@ margin-top: 21px;
 	background-color: #669ec0;
 	outline:none;
 }
+
+input::-webkit-inner-spin-button,
+input::-webkit-outer-spin-button {
+-webkit-appearance: none; 
+}
+
+
 
 footer {
 	background-color: white;
@@ -336,6 +432,8 @@ footer {
 	text-align: center;
 	width: 46px;
 	height: 46px;
+
+
 }
 
 
@@ -382,7 +480,7 @@ footer {
 
 .social  {
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-between;
 
 }
 
