--- a/css/style.css
+++ b/css/style.css
@@ -555,12 +555,16 @@ footer {
 	background-color: white;
 	height: 120px;
     align-items: center; 
-    z-index: 1;
+    
+
+}
+
+.footer {
+	z-index: 1;
     position: absolute;
     margin-top: -120px;
     background-color: rgba(255,255,255,.9);
   /*  box-shadow: 0 0 black; */
-
 }
 
 .map {
