--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
+/*common*/
+
 body {
 	width: 1200px;
     margin: 0 auto;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-
 	font-family: "PT Sans", "Arial", sans-serif;
 	font-size: 14px;
 	line-height: 21px;
@@ -12,14 +13,28 @@ body {
 
 	background-color: #f2f2f2;
 }
-	a {
-		text-decoration: none;
+
+a {
+	text-decoration: none;
 } 
 
-	img {
-		max-width: 100%;
-		height: auto;
-	}
+img {
+	max-width: 100%;
+	height: auto;
+}
+
+.visually_hidden {
+  	position: absolute;
+   	width: 1px;
+   	height: 1px;
+  	margin: -1px;
+   	padding: 0;
+  	overflow: hidden;
+   	border: 0;
+   	clip: rect(0 0 0 0)
+}
+
+/*header*/
 
 .nav {
 	height: 56px;
@@ -52,10 +67,12 @@ body {
 	background-color: white; 
 }
 
-.img-logo {
+.img_logo {
 	height: 100%;
 	padding-top: 0;
 	margin: 0;
+	z-index: 1;
+	
 }
 
 /*flex*/
@@ -68,58 +85,50 @@ body {
 }
 
 
+/*main*/
 
-.visually-hidden {
-   position: absolute;
-   width: 1px;
-   height: 1px;
-   margin: -1px;
-   padding: 0;
-   overflow: hidden;
-   border: 0;
-   clip: rect(0 0 0 0)
-}
-
-.background {
-	width: 1199px;
-	height: 508px;
-	background-color: #e4f1f9;
-	background-image: url("img/background.jpg");
-	background-position: center;
+.main_image {
+	height: 431px;
+    padding-top: 76px;
+    position: relative;
+    background: linear-gradient(to top, #3e79a2, #e3f0f9);
+	background-image: url(../img/background.jpg);
 	background-repeat: no-repeat;
-    
+   
 }
 
+.main_image img {
+  	display: block;
+ 	margin: 0 auto;
+}
 
-.background_reasons {
-	height: 151px;
+.main_image:after {
+ 	content: url(../img/polygon.png);
+  	position: absolute;
+  	bottom: 0;
+  	left: 0;
+  	display: block;
+  	width: 100%;
+  	height: 57px;
+}
+
+.reasons_header {
+	height: 115px;
+	padding-top: 60px;
+	padding-bottom: 40px;
 	text-align: center;
 	background-color: white;
-	border-top: 0;
-	padding-bottom: 65px;
-	
-	
 }
-.slogan {
+.reasons_slogan {
 	margin: 0;
-    padding-top: 65px;
-	height: 47px;
+    margin-bottom: 30px;
 	font-size: 21px;
 	line-height: 26px;
 	font-weight: 700;
-
-
-}
-.features-text {
-	
-	margin-top: 54px;
-	
-	line-height: 14px;
-	background-color: white;
 }
 
 
-.feature-list {
+.feature_list {
 	
 	margin: 0;
 	padding-left: 0;
@@ -127,11 +136,11 @@ body {
 	text-align: center;
 }
 
-.feature-photo1 {
+.feature_photo1 {
 	background-image: url("img/reason1_back.jpg");
 }
 
-.feature-photo2 {
+.feature_photo2 {
 	background-image: url("img/reason2_back.jpg");
 }
 
@@ -147,7 +156,7 @@ body {
 }
 
 
-.feature-item-white1 {
+.feature_item_white1 {
 	color: white;
 	background-color: #81b3d2;
 	width: 400px;
@@ -172,7 +181,7 @@ body {
 
 
 
-.feature-item-white2 {
+.feature_item_white2 {
 	color: white;
 	background-color: #81b3d2;
 	width: 400px;
@@ -180,12 +189,12 @@ body {
 
 } 
 
-.feature-item-white2 p {
+.feature_item_white2 p {
 
 margin-top: 21px;
 }
 
-.feature-item-black {
+.feature_item_black {
 	width: 400px;
 	color: black;
 	background-color: #eeeeee;
@@ -195,7 +204,7 @@ margin-top: 21px;
 }
 
 
-.feature-list h3 {
+.feature_list h3 {
 	font-size: 21px;
 	font-weight: 700;
 }
@@ -203,7 +212,7 @@ margin-top: 21px;
 .features {
 	padding-right: 0;
 }
-.features-img {
+.features_img {
 	list-style: none;
 	background-color: white;
 	padding-left: 0;
@@ -213,13 +222,13 @@ margin-top: 21px;
 	height: 166px;
 }
 
-.features-img figure {
+.features_img figure {
 	margin-top: 60px;
 }
 
 
 /*flex */
-.features-img {
+.features_img {
 	display: flex;
 	justify-content: space-around;
 
@@ -238,7 +247,7 @@ margin-top: 21px;
 	margin-top: 50px;
 }
 
-.text-all {
+.text_all {
 	text-align: center;
 	background-color: white;
 	height: 205px;
@@ -246,12 +255,12 @@ margin-top: 21px;
 	
 }
 
-.text-all div {
+.text_all div {
 	height: 147px;
 	padding-top: 58px;
 }
 
-.text-all h2 {
+.text_all h2 {
 	font-size: 30px;
 	line-height: 30px;
 	font-weight: 700;
@@ -289,7 +298,7 @@ margin-top: 21px;
 }
 
 
-.form-container{
+.form_container{
 	position: relative;
 }
 
@@ -449,7 +458,7 @@ form input {
 }
 
 .plus1,
-plus2 {
+.plus2 {
 	margin-left: 0;
 	width: 38px;
 	padding: 0;
@@ -501,22 +510,22 @@ plus2 {
 	margin-top: 55px;
 } */
 
-.form-search div {
+.form_search div {
 	line-height: 26px;
 	font-weight: 700;
 }
 
-.form-search input {
+.form_search input {
 	font: inherit;
 	background-color: #f2f2f2; 
 	border:none;
 }
 
-.form-search input:hover {
+.form_search input:hover {
 	background-color: #ebebeb;
 }
 
-.form-search input:focus {
+.form_search input:focus {
 	background-color: white;
 	outline:none;
 	border: 2px solid #e5e5e5; 
@@ -570,7 +579,7 @@ footer {
 	z-index: 2;
 }
 
-.map-background {
+.map_background {
 	background-color: #cbdda9;
 	background-image:url("img/map.png");
 
@@ -732,12 +741,12 @@ footer {
 	}
 }
 
-.form-show {
+.form_show {
 	display: block;
 	animation: bounce 0.6s;
 
 }
 
-.form-error {
+.form_error {
 	animation: shake 0.6s;
 }
