--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,9 @@ img {
 	z-index: 1;
 }
 
+.img_logo a {
+	padding-top: 0;
+}
 
 /*main*/
 
@@ -511,18 +514,21 @@ input::-webkit-outer-spin-button {
 }
 
 
-.footer {
+footer {
+	display: flex;
+	justify-content: space-around;
+	align-items: center; 
 	height: 120px;
-    align-items: center; 
-	z-index: 1;
-    position: absolute;
-    margin-top: -120px;
     background-color: rgba(255,255,255,.9);
-  /*  box-shadow: 0 0 black; */
 }
 
+.footer {
+	position: absolute;
+    margin-top: -120px;
+}
+
+
 .map {
-	z-index: 2;
 	height: 593px;
 	background-color: #cbdda9;
 	background-image:url("img/map.png");
@@ -599,16 +605,6 @@ footer section {
 
 .academy a {
 	margin-top: 7px; 
-}
-
-
-/*	flex footer */
-
-footer {
-	display: flex;
-	justify-content: space-around;
-	
-
 }
 
 
